add add-exports option required for Serial Monitor